# dev-ws

./: README.md  README_.md  README_cn.md  run_inertial_nav.sh  start_origicar.sh  start_yolo.sh
racing/qr_mem/: CMakeLists.txt  README_QR_DETECTION.md  package.xml
racing/qr_mem/msg/: SampleMessage.msg
racing/qr_mem/src/: aurora_qr_detection.py  qr_mem.cpp
racing/racing_inertial_nav/: CMakeLists.txt  README.md  package.xml
racing/racing_inertial_nav/config/: TUNING.md  params.yaml
racing/racing_inertial_nav/include/: inertial_nav_controller.hpp
racing/racing_inertial_nav/launch/: inertial_nav.launch.py
racing/racing_inertial_nav/scripts/: start_test.sh
racing/racing_obstacle_detection_yolo/config/: obstacles对应物品.txt  yolov5sconfig.json
racing/racing_obstacle_detection_yolo/launch/: racing_obstacle_detection_yolo.launch.py
racing/racing_obstacle_detection_yolo/src/: sample.cpp
